[project]
name = "aula09-bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Ugor Marcilio Brandão Costa",email = "ugor_gost@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "apache-airflow (>=2.10.4,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "streamlit (>=1.42.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
